# project2

./: README.md  example.py  pyproject.toml
src/: masks.py  processing.py
src/widget/: widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
utils/: hello.py
