[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Foma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.11.0"
black = "^24.4.2"
isort = "^5.13.2"

[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119  # Укажите желаемую максимальную длину строки
skip-string-normalization = false  # Укажите true, если хотите пропустить нормализацию строк

[tool.mypy]
python_version = "3.8"  # Укажите вашу версию Python
strict = true  # Включите строгий режим
